# clang

./: README.md
.github/: pull_request_template.md
chatsock/: CMakeLists.txt  README.md
chatsock/include/: chat.h
chatsock/src/: client.c  main.c  server.c
maze/: CMakeLists.txt  README.md
maze/include/: maze.h
maze/src/: main.c  maze.c
memory-manage/: README.md
memory-manager/: CMakeLists.txt  README.md
memory-manager/include/: manager.h  memory.h
memory-manager/src/: main.c  manager.c  memory.c
multitask/: CMakeLists.txt  README.md
multitask/.cache/clangd/index/: main.c.28932D403007D9CB.idx  main.c.3D40F4A877225542.idx  proc.c.058D42085D90F9BD.idx  proc.c.185C554A87948670.idx  proc.h.55D719FED9510F7C.idx  proc.h.BA86F63A48678935.idx  queue.c.1C84EBEE7F6ADCE5.idx  queue.c.8743D53C59A402A8.idx  queue.h.890AEF514AC58507.idx  scheduler.c.4068C35833E231D4.idx  scheduler.c.9424A22D6B5820AF.idx  scheduler.h.32483AF123E41EA0.idx
multitask/include/: proc.h  queue.h  scheduler.h
multitask/src/: main.c  proc.c  queue.c  scheduler.c
simple-db/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  simple-db
simple-db/include/: data.h  map.h
simple-db/src/: data.c  main.c  map.c
simple-http/: CMakeLists.txt  README.md
simple-http/include/: http.h
simple-http/src/: http.c  main.c
spreadsheet-cli/: CMakeLists.txt  README.md
spreadsheet-cli/include/: cell_ref.h  file_io.h  spreadsheet.h
spreadsheet-cli/src/: cell_ref.c  file_io.c  main.c  spreadsheet.c
(+7 files in other folders)
